# SimpleDataBase

./: .gitignore  CMakeLists.txt  README.md
include/: Array.hpp  CommonInterfaces.hpp  ConsoleFunctions.hpp  DataBase.hpp  DataBaseFunct.hpp  DataBaseInterfaces.hpp  Date.hpp  DerivedWorker1.hpp  DerivedWorker2.hpp  DerivedWorker3.hpp  FileFunctions.hpp  IWorker.hpp  Man.hpp  MemoryLeaksDebug.hpp  Person.hpp  Settings.hpp  TableInterfaces.hpp
src/: ConsoleFunctions.cpp  DataBaseFunct.cpp  Date.cpp  DerivedWorker1.cpp  DerivedWorker2.cpp  DerivedWorker3.cpp  IWorker.cpp  Man.cpp  Person.cpp  main.cpp
